# e-ride

./: QWEN.md  pyproject.toml
e_ride/: conftest.py  manage.py  pytest.ini
e_ride/apps/Accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
e_ride/apps/Accounts/migrations/: 0001_initial.py  0002_alter_driver_nin.py
e_ride/apps/Rides/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
e_ride/apps/Rides/migrations/: 0001_initial.py
e_ride/base/: email.py  fields.py  managers.py  mixins.py  models.py  utils.py
e_ride/e_ride/: asgi.py  settings.py  urls.py  wsgi.py
e_ride/signals/: auth_signals.py
e_ride/templates/emails/: verify-mail.html
e_ride/tests/: test_nearest_drivers.py  test_ride_lifecycle.py
e_ride/tests/test_accounts/: test_register.py  test_signup.py
